---
source: book/tests/snapshot.rs
expression: "from salaries\ngroup [emp_no] (\n  aggregate [emp_salary = average salary]\n)\njoin t=titles [==emp_no]\njoin dept_emp side:left [==emp_no]\ngroup [dept_emp.dept_no, t.title] (\n  aggregate [avg_salary = average emp_salary]\n)\njoin departments [==dept_no]\nselect [dept_name, title, avg_salary]\n"
---
from salaries
group [emp_no] (
  aggregate [emp_salary = average salary]
)
join t = titles [==emp_no]
join side:left dept_emp [==emp_no]
group [
  dept_emp.dept_no,
  t.title,
] (
  aggregate [avg_salary = average emp_salary]
)
join departments [==dept_no]
select [
  dept_name,
  title,
  avg_salary,
]



